# AI_Trip_Planner_Agent

./: .gitignore  README.md  main.py  package-lock.json  prompts.py  pyproject.toml  setup.py  web_operations.py
agent/: agentic_workflow.py
ai_trip_planner.egg-info/: PKG-INFO  SOURCES.txt
backend/: app.py
backend/agent/: llm_wrapper.py  prompts.py
backend/data_sources/: snapshots_operations.py  web_operations.py
backend/models/: trip_request.py
backend/nodes/: graph.py  node_functions.py
config/: config.yaml
frontend/static/templates/: index.css  index.html  index.js
utils/: save_to_document.py
